# massiveeq

./: .SRCINFO  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PKGBUILD  README.md  design-qa.md  massiveeq.install
.github/workflows/: aur-sync.yml  ci.yml
crates/massiveeq/: Cargo.toml  build.rs
crates/massiveeq-core/: Cargo.toml
crates/massiveeq-core/src/: analysis.rs  lib.rs  model.rs  parser.rs  pipewire.rs  storage.rs
crates/massiveeq-dsp/: Cargo.toml
crates/massiveeq-dsp/src/: analysis.rs  biquad.rs  compiler.rs  convolution.rs  graphic.rs  lib.rs  runtime.rs
crates/massiveeq-tray/: Cargo.toml
crates/massiveeq-tray/src/: main.rs
crates/massiveeq/src/: client.rs  graph.rs  main.rs  update.rs
crates/massiveeqctl/: Cargo.toml
crates/massiveeqctl/src/: lib.rs  main.rs
crates/massiveeqd/: Cargo.toml
crates/massiveeqd/src/: api.rs  audio_engine.rs  device.rs  device_monitor.rs  filter_host.rs  main.rs  native_filter.rs
docs/: noctalia-widget.md  screenshots.md
packaging/: massiveeq-tray.service  massiveeq.service  org.massiveeq.MassiveEQ.desktop  org.massiveeq.MassiveEQ.metainfo.xml  org.massiveeq.Service1.service
packaging/aur/: README.md  export.sh  sync.sh
packaging/noctalia-v4/massiveeq/: BarWidget.qml  FilterBank.qml  FilterKindIcon.qml  FilterStrip.qml  FilterValueField.qml  Main.qml  OutputSelector.qml  Panel.qml  ProfileSelector.qml  README.md  manifest.json
packaging/noctalia-v5/massiveeq/: README.md  panel.luau  plugin.toml  service.luau  widget.luau
