[workspace]
members = ["crates/massiveeq-core", "crates/massiveeqd", "crates/massiveeq"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["MassiveEQ contributors"]
repository = "https://github.com/massiveeq/massiveeq"

[workspace.dependencies]
anyhow = "1.0"
dirs = "6.0"
libadwaita = { version = "0.9.2", features = ["v1_8"] }
gtk4 = { version = "0.11.0", features = ["v4_18"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "process", "signal", "sync", "time"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
zbus = { version = "5.11", features = ["tokio"] }
