[workspace]
members = [
    "crates/massiveeq-core",
    "crates/massiveeq-dsp",
    "crates/massiveeqd",
    "crates/massiveeq",
    "crates/massiveeq-tray",
]
resolver = "2"

[workspace.package]
version = "0.3.0-beta.1"
edition = "2024"
license = "MIT"
authors = ["MassiveEQ contributors"]
repository = "https://github.com/massiveadam/massiveeq"

[workspace.dependencies]
anyhow = "1.0"
bytemuck = "1.24"
dirs = "6.0"
fft-convolver = "0.4"
libadwaita = { version = "0.9.2", features = ["v1_8"] }
gtk4 = { version = "0.11.0", features = ["v4_18"] }
ksni = "0.3.5"
pipewire = { version = "0.10", features = ["v1_2_0"] }
regex = "1.11"
realfft = "3.5"
rustfft = "6.4"
rtrb = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "process", "signal", "sync", "time"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
zbus = { version = "5.11", features = ["tokio"] }
