[package]
name = "massiveeq-tray"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
ksni.workspace = true
massiveeq-core = { path = "../massiveeq-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
zbus.workspace = true

