[package]
name = "massiveeqctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
massiveeq-core = { path = "../massiveeq-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
zbus.workspace = true
